<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 앱 기본 -->
    <string name="app_name">Umanji</string>
    <string name="action_settings">Settings</string>
    <string name="slide">slide</string>
    <string name="exit">취소</string>
    <string name="empty">비었음</string>


    <string name="update_btn">수정</string>
    <string name="update_name">입력해주세요.</string>

    <!-- 에러 -->
    <string name="error_bad_network">네트워크 상태가 좋지 않습니다. 잠시후 다시 시도해주세요.</string>

    <!-- 메인 지도 -->
    <string name="main_map_create_spot">지도을 터치하면 건물(장소)를 만들거나 홍보를 할 수 있어요.</string>
    <string name="main_map_create_complex">지도을 터치하면 거대/복합단지(장소)를 만들수 있어요.</string>


    <!-- 채널 공통 -->
    <string name="delete_confirm">정말 삭제하시겠습니까?</string>
    <string name="delete_btn">삭제</string>
    <string name="cancel_btn">취소</string>

    <!-- 장소 어드민 -->
    <string name="admin_set_dong_level">동단위 정보센터 지정</string>
    <string name="admin_set_gu_level">구단위 정보센터 지정</string>
    <string name="admin_set_city_level">시단위 정보센터 지정</string>

    <string name="admin_remove_dong_level">동단위 정보센터 해제</string>
    <string name="admin_remove_gu_level">동단위 정보센터 해제</string>
    <string name="admin_remove_city_level">동단위 정보센터 해제</string>


    <!-- 장소 관려 -->
    <string name="spot_no_name">이름없는 장소</string>
    <string name="spot_input_name">이름을 입력해 주세요.</string>
    <string name="spot_input_floor">층 입력(숫자로)</string>
    <string name="spot_add_btn">장소추가</string>
    <string name="spot_join_btn">참여하기</string>
    <string name="spot_unjoin_btn">탈퇴하기</string>

    <string name="spot_create_btn">장소 생성</string>
    <string name="spot_create_success">장소 생성 성공!</string>
    <string name="spot_create_confirm">이곳에 장소(건물)를 만드시겠습니까?</string>


    <string name="spot_update_address_label">지도을 터치하거나 마커를 드래그 하면 주소를 수정할 수 있습니다.</string>
    <string name="spot_update_address_ok">변경</string>
    <string name="spot_update_address_confirm">이곳으로 옮기시겠습니까?</string>


    <string name="spot_create_error">네트워크 상태가 좋지 않습니다. 잠시후 다시 시도해주세요.</string>

    <string name="complex_create_btn">장소 생성</string>
    <string name="complex_create_success">복합단지 생성 성공!</string>
    <string name="complex_create_confirm">공원, 대학교, 아파트단지를 만듭니다.</string>

    <string name="create_error">네트워크 상태가 좋지 않습니다. 잠시후 다시 시도해주세요.</string>

    <!-- 빌딩 관려 -->
    <string name="multi_spot_input_name">빌딩이름</string>
    <string name="multi_spot_add_btn">빌딩추가</string>
    <string name="multi_spot_join_btn">참여하기</string>
    <string name="multi_spot_create_btn">빌딩생성</string>
    <string name="multi_spot_create_success">빌딩 생성 성공!</string>
    <string name="multi_spot_create_confirm">빌딩을 만드시겠습니까?</string>
    <string name="multi_spot_create_error">네트워크 상태가 좋지 않습니다. 잠시후 다시 시도해주세요.</string>


    <!-- 포스트 -->
    <string name="post_input_name">포스트 이름</string>
    <string name="post_input_text">예 : 골프연습장</string>
    <string name="post_gallery_btn">이미지</string>
    <string name="post_create_btn">포스트 생성</string>
    <string name="post_create_success">포스트 생성 성공!</string>
    <string name="post_create_error">네트워크 상태가 좋지 않습니다. 잠시후 다시 시도해주세요.</string>
    <string name="post_like_btn">도움</string>
    <string name="post_unlike_btn">도움취소</string>

    <!-- 투표 -->

    <!-- 커뮤니티 -->
    <string name="community_input_name">커뮤니티 이름</string>
    <string name="community_input_text">내용을 입력해주세요</string>
    <string name="community_create_btn">커뮤니티 생성</string>
    <string name="community_create_success">커뮤니티 생성 성공</string>
    <string name="community_create_error">네트워크 상태가 좋지 않습니다. 잠시후 다시 시도해주세요.</string>
    <string name="keyword_explain">주제어 키워드는 한 단어만 등록 가능합니다. 예를들어 축구를 좋아하는 단체의 키워드는 축구로 키워드를 설정하시면 됩니다.</string>

    <!-- 키워드 -->
    <string name="keyword_create_btn">키워드 등록</string>

    <!-- about -->
    <string name="about_channel_update">정보수정</string>

    <!-- 로그인/회원가입  -->
    <string name="login_input_email">이메일</string>
    <string name="login_input_password">비밀번호</string>
    <string name="login_action_sign_in_reg">로그인 or 회원가입</string>
    <string name="login_action_sign_in">로그인</string>
    <string name="login_action_sign_out">로그아웃</string>

    <string name="sign_error_invalid_email">잘못된 Email 주소입니다.</string>
    <string name="sign_error_invalid_password">비밀번호는 4자 이상 입력해주세요</string>
    <string name="sign_error_incorrect_password">비밀번호를 확인해 주세요</string>

    <!-- 공통 폼 에러메시지 -->
    <string name="error_field_required">값을 입력해 주세요</string>

    <!-- google map service -->
    <!--<string name="google_maps_key">AIzaSyC69r9yZNjPQGKzH20jvqcxqBorNPDvZCw</string>
    <string name="gcm_sender_id">AIzaSyC69r9yZNjPQGKzH20jvqcxqBorNPDvZCw</string>-->


    <!-- facebook service-->
    <string name="facebook_app_id">755851314564503</string>
    <string name="title_activity_signup_other">SignupOther</string>
    <string name="title_activity_new_main">newMain</string>


</resources>
